<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_layout"
    tools:context=".Login">

        <TextView
            android:id="@+id/loginTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please enter user info"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
...
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextFields" />

    <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:onClick="attemptLogin"
            android:height="60dp"
            android:layout_marginTop="182dp"
...
